# HannsDB

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.coord/: README.md
crates/hannsdb-core/: Cargo.toml
crates/hannsdb-core/src/: db.rs  db_types.rs  document.rs  lib.rs  pk.rs  wal.rs
crates/hannsdb-core/src/catalog/: collection.rs  index.rs  manifest.rs  mod.rs  schema_mutation.rs  version.rs
crates/hannsdb-core/src/forward_store/: descriptor.rs  file_writer.rs  mem_store.rs  mod.rs  reader.rs  schema.rs
crates/hannsdb-core/src/query/: ast.rs  executor.rs  filter.rs  hits.rs  mod.rs  planner.rs  rerank.rs  search.rs
crates/hannsdb-core/src/segment/: arrow_io.rs  index_runtime.rs  manager.rs  metadata.rs  mod.rs  payloads.rs  records.rs  segment_set.rs  sparse.rs  tombstone.rs  vectors.rs  version_set.rs  writer.rs
crates/hannsdb-core/src/storage/: compaction.rs  lance_schema.rs  lance_store.rs  mod.rs  paths.rs  persist.rs  primary_keys.rs  recovery.rs  segment_io.rs  selector.rs  tombstone.rs  wal.rs
crates/hannsdb-core/tests/: ann_recall_params.rs  api_dml.rs  api_filter_query.rs  api_query.rs  api_recovery.rs  api_reranker.rs  api_schema.rs  api_sparse.rs  api_string_pk.rs  bench_suite.rs  catalog_manifest.rs  collection_api.rs  compaction.rs  document_api.rs  forward_store_roundtrip.rs  lance_compat.rs  lifecycle.rs  multi_vector_document.rs  recovery_authority.rs  segment_storage.rs  wal_recovery.rs  zvec_parity_dml.rs  zvec_parity_filter_query.rs  zvec_parity_query.rs  zvec_parity_recall_params.rs  zvec_parity_recovery.rs  zvec_parity_reranker.rs  zvec_parity_schema.rs  zvec_parity_sparse.rs  zvec_parity_string_pk.rs
crates/hannsdb-daemon/: Cargo.toml
crates/hannsdb-daemon/src/: api.rs  lib.rs  main.rs  routes.rs  routes_mutation.rs  routes_search.rs
crates/hannsdb-daemon/tests/: http_smoke.rs  lance_query_scope_guard.rs
crates/hannsdb-index/: Cargo.toml
crates/hannsdb-index/src/: adapter.rs  bitset.rs  descriptor.rs  factory.rs  flat.rs  hnsw.rs  hnsw_hvq.rs  hnsw_sq.rs  ivf.rs  ivf_usq.rs  lib.rs  scalar.rs  sparse.rs
crates/hannsdb-index/tests/: hnsw_adapter.rs  index_registry.rs  ivf_adapter.rs
crates/hannsdb-py/: Cargo.toml  pyproject.toml
crates/hannsdb-py/python/hannsdb/: .gitignore  __init__.py
crates/hannsdb-py/python/hannsdb/executor/: __init__.py  query_executor.py
crates/hannsdb-py/python/hannsdb/extension/: __init__.py  multi_vector_reranker.py  rerank_function.py
crates/hannsdb-py/python/hannsdb/model/: __init__.py  collection.py  doc.py
crates/hannsdb-py/python/hannsdb/model/param/: __init__.py  add_column_option.py  alter_column_option.py  collection_option.py  index_params.py  optimize_option.py  vector_query.py
crates/hannsdb-py/python/hannsdb/model/schema/: __init__.py  collection_schema.py  field_schema.py
crates/hannsdb-py/python/hannsdb/typing/: __init__.py  _enum.py  data_type.py  index_type.py  log_level.py  log_type.py  metric_type.py  quantize_type.py
crates/hannsdb-py/src/: lib.rs
crates/hannsdb-py/tests/: test_collection_concurrency.py  test_collection_facade.py  test_collection_parity.py  test_common_param_surface.py  test_doc_field_access.py  test_exception_handling.py  test_hnsw_hvq_surface.py  test_ivf_usq_surface.py  test_lance_ecosystem_compat.py  test_lance_storage_surface.py  test_query_executor.py  test_query_order_surface.py  test_schema_mutation_surface.py  test_schema_surface.py  test_typing_surface.py
docs/: architecture-analysis.md  custom-dataset-smoke.md  hannsdb-hanns-vs-zvec-capability-report.md  hannsdb-implementation-status-2026-04-13.md  hannsdb-phase6-design.md  hannsdb-project-design.md  hannsdb-project-plan.md  hannsdb-vs-zvec-gap-analysis.md  knowhere-rs-issues.md  perf-test-plan.md  perf1536d50k-hannsdb-gate-2026-03-19.md  vdbb-hannsdb-smoke.md  vector-db-bench-notes.md
docs/superpowers/plans/: 2026-03-19-hannsdb-v1.md  2026-03-19-tmux-file-coordination.md  2026-03-20-architecture-analysis-alignment-v1.md  2026-04-09-delete-by-filter.md  (+21 more)
logs/benchmarks/: result_20260413_hannsdb-hk-x86-20260413_hannsdb.json
python/: generate_custom_vdbb_dataset.py  test_smoke.py
scripts/: run_hannsdb_optimize_bench.sh  run_knowhere_hnsw_variance.sh  run_vdbb_hannsdb_perf1536d50k.sh  run_vdbb_hannsdb_perf1536d50k_watchdog.sh  run_vdbb_hannsdb_smoke.sh  run_zvec_parity_smoke.sh  smoke_common_type_param_surface.py  smoke_hnsw_hvq_surface.py  smoke_ivf_usq_surface.py  smoke_schema_mutation_surface.py  smoke_string_pk_order_by.py  sync-remote.sh
scripts/coord/: dispatch-task.sh  init.sh  lib.sh  monitor.sh  set-worker-state.sh  start-monitor.sh  start-watch.sh  status.sh  stop-monitor.sh  stop-watch.sh  test-smoke.sh  watch.sh
(+19 files in other folders)
