[workspace]
members = [
    "crates/hannsdb-core",
    "crates/hannsdb-index",
    "crates/hannsdb-py",
    "crates/hannsdb-daemon",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
arrow = { version = "54", default-features = false, features = ["ipc"] }
half = "2"
parquet = { version = "54", default-features = false, features = ["arrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3.10"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
