[package]
name = "hannsdb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
hanns-backend = ["hannsdb-index/hanns-backend"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
log = "0.4"
hannsdb-index = { path = "../hannsdb-index" }

[dev-dependencies]
tempfile.workspace = true
