[package]
name = "hannsdb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
hanns-backend = ["hannsdb-index/hanns-backend"]
lance-storage = ["dep:lance"]

[dependencies]
arrow.workspace = true
half.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
log = "0.4"
hannsdb-index = { path = "../hannsdb-index" }
lance = { path = "../../../lance/rust/lance", optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
