[package]
name = "hannsdb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
hanns-backend = ["hannsdb-index/hanns-backend"]
lance-storage = ["dep:arrow-array", "dep:arrow-schema", "dep:lance"]

[dependencies]
arrow.workspace = true
half.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
log = "0.4"
hannsdb-index = { path = "../hannsdb-index" }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }
lance = { path = "/Users/ryan/Code/vectorDB/lance/rust/lance", optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
