[package]
name = "hannsdb-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "hannsdb_daemon"
path = "src/lib.rs"

[[bin]]
name = "hannsdb-daemon"
path = "src/main.rs"

[features]
hanns-backend = ["hannsdb-core/hanns-backend"]
lance-storage = ["hannsdb-core/lance-storage"]

[dependencies]
axum = { version = "0.7", features = ["json"] }
hannsdb-core = { path = "../hannsdb-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
