[package]
name = "hannsdb-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
knowhere-backend = ["dep:knowhere-rs"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
knowhere-rs = { path = "../../../knowhere-rs", optional = true }
