[package]
name = "hannsdb-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
hanns-backend = ["dep:hanns"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
hanns = { path = "../../../Hanns", optional = true }
