[package]
name = "hannsdb-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["python-binding"]
python-binding = ["dep:pyo3", "dep:numpy"]
knowhere-backend = ["hannsdb-core/knowhere-backend"]

[lib]
name = "_native"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
hannsdb-core = { path = "../hannsdb-core" }
pyo3 = { version = "0.23", features = ["abi3-py39", "auto-initialize", "extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

[dev-dependencies]
tempfile.workspace = true

[package.metadata.maturin]
name = "hannsdb"
module-name = "hannsdb._native"
python-source = "python"
